fixed scrollbard through css

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,12 @@
   --fw-bold: 700;
 }
 
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
 #root {
   margin: auto;
 }
